syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "bhtu.work.tths.studentservice.proto";
option java_outer_classname = "StudentProto"; // if not specified, it will convert the file name

message EventOfStudent {
  message PrizeGroup {
    string nameOfPrize = 1;
    int32 amount = 2;
  }

  string dateOfEvent = 1;
  string nameOfEvent = 2;
  string achievement = 3;
  string classStr = 4;
  repeated PrizeGroup prizeGroup = 5;
  int32 totalExpense = 6;

}

message Student {
  string id = 1;
  string name = 2;
  string dateOfBirth = 3;
  string householdNumber = 4;
  string parent = 5;
  repeated EventOfStudent eventOfStudent = 6;
}

message StudentId {
  string identifier = 1;
}

message EventDate {
  string date = 1;
}

message EventName {
  string name = 1;
}


service StudentService {
  rpc getById(StudentId) returns(Student){}
  rpc getByHouseholdNumber(StudentId) returns(stream Student){}
  rpc getByEventDate(EventDate) returns(stream EventOfStudent){}
  rpc getByEventName(EventName) returns(stream EventOfStudent){}
}